<resources>
    <string name="app_name">Maps1</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="login">Увійти</string>
    <string name="register">Реєстрація</string>
    <string name="first_name">Імя</string>
    <string name="last_name">Прізвище</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="place_photo">Фото місця</string>
    <string name="save">Зберегти</string>
    <string name="route">Маршрут</string>
    <string name="reviews">Відгуки</string>
    <string name="your_account">Твій аккаунт</string>
    <string name="welcome_to_aroundme">Ласкаво просимо до AroundMe</string>
    <string name="place_name_example_1">Назва місця</string>
    <string name="place_name_example_2">Кафе Львівські пляцки</string>
    <string name="back_button">Назад</string>
    <string name="place_details">Деталі місця</string>
</resources>
